# openai-stuff

./: .gitignore  README.md
chatgpt-file-downloader/: README.md  main.py  pyproject.toml
