[tool.poetry]
name = "chatgpt-file-downloader"
version = "0.1.0"
description = ""
authors = ["hckr"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
click = "^8.1.7"
urllib3 = "^1.26"
undetected-chromedriver = "^3.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
